--- a/spring-boot-tutorial/src/main/resources/templates/create-chatroom1-success.html
+++ b/spring-boot-tutorial/src/main/resources/templates/create-chatroom1-success.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <div class="container text-center">
-    <h3>You have signed up successfully!</h3>
-    <h4><a th:href="@{/}">Click here to Login</a></h4>
+    <h3>You have created a chatroom successfully!</h3>
+    <h4><a th:href="@{/home}">Click here</a></h4>
 </div>
 
 </body>
