--- a/spring-boot-tutorial/src/main/resources/templates/create-chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/create-chatroom.html
@@ -16,12 +16,12 @@
 </head>
 <body>
 <div class="container">
-    <form th:action="@{/create-chatroom1-process}" th:object="${chatroom}"
+    <form th:action="@{/create-chatroom-process}" th:object="${chatroom}"
           method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="row mb-3">
             <label for="chatroomName" class="col-sm-2 col-form-label">Chatroom Name</label>
             <div class="col-md-6">
-                <input class="form-control" id="chatroomName" th:field="*{name}">
+                <input class="form-control" id="chatroomName" th:field="*{name}" required minlength="1">
             </div>
         </div>
         <fieldset class="row mb-3">
