--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -14,14 +14,14 @@
 <div id="username-page">
     <div class="username-page-container">
         <h1 class="title">Chatroom: </h1>
-        <h1 class="title" th:text="${chatroomId}"></h1>
+        <h1 class="title" id="chatId" th:text="${chatroomId}"></h1>
         <h1 class="title" th:text="${chatroom.name}"></h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
                 <input type="text" id="name" th:value="${user.username}" autocomplete="on" class="form-control" disabled/>
             </div>
             <div class="form-group">
-                <button type="submit" class="accent username-submit">Join Chatroom</button>
+                <button type="submit" class="accent username-submit">Start chatting</button>
             </div>
         </form>
     </div>
@@ -59,13 +59,6 @@
             </div>
         </div>
         <div class="col">
-            <!--ul class="list-group">
-                <li class="list-group-item active" aria-current="true">An active member</li>
-                <li class="list-group-item">A second member</li>
-                <li class="list-group-item">A third member</li>
-                <li class="list-group-item">A fourth member</li>
-                <li class="list-group-item">And a fifth member</li>
-            </ul-->
             <ul class="list-group" th:each="user: ${usernames}">
                 <li class="list-group-item" th:text="${user}">
                 </li>
@@ -82,6 +75,7 @@
 <div class="container text-center">
     <h4><a th:href="@{/home}">Back to Chatroom Home</a></h4>
 </div>
+<!--div th:text="${userMessage.message}"></div-->
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
@@ -128,7 +122,7 @@
         // Tell your username to the server
         stompClient.send("/app/chat.addUser",
             {},
-            JSON.stringify({sender: username, type: 'JOIN'})
+            JSON.stringify({sender: username, type: 'JOIN'})  // adding user in ChatController and sending join
         )
 
         connectingElement.classList.add('hidden');
@@ -143,11 +137,15 @@
 
     function sendMessage(event) {
         var messageContent = messageInput.value.trim();
+        var chatroomId = document.querySelector('#chatId').textContent;
+
         if(messageContent && stompClient) {
             var chatMessage = {
                 sender: username,
                 content: messageInput.value,
-                type: 'CHAT'
+                type: 'CHAT',
+                date: new Date().toLocaleString('sv-SE'),
+                chatroomId: chatroomId
             };
             stompClient.send("/app/chat.sendMessage", {}, JSON.stringify(chatMessage));
             messageInput.value = '';
@@ -163,9 +161,9 @@
 
         if(message.type === 'JOIN') {
             messageElement.classList.add('event-message');
-            message.content = message.sender + ' joined!';
+            message.content = message.sender + ' joined!'; // message when joining
         } else if (message.type === 'LEAVE') {
-            messageElement.classList.add('event-message');
+            messageElement.classList.add('event-message'); // message when leaving
             message.content = message.sender + ' left!';
         } else {
             messageElement.classList.add('chat-message');
