--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -45,6 +45,14 @@
                 <div class="connecting">
                     Connecting...
                 </div>
+                <ul th:each="conv : ${conversation}">
+                    <li>
+                        <span class="list-group-item" th:text="${conv.message.userId}"></span>
+                        <span class="list-group-item" th:text="${conv.username}"></span>
+                        <span class="list-group-item" th:text="${conv.message.date}"></span>
+                        <p class="list-group-item" th:text="${conv.message.message}"></p>
+                    </li>
+                </ul>
                 <ul id="messageArea">
 
                 </ul>
@@ -60,8 +68,7 @@
         </div>
         <div class="col">
             <ul class="list-group" th:each="user: ${usernames}">
-                <li class="list-group-item" th:text="${user}">
-                </li>
+                <li class="list-group-item" th:text="${user}"></li>
             </ul>
         </div>
     </div>
@@ -75,7 +82,6 @@
 <div class="container text-center">
     <h4><a th:href="@{/home}">Back to Chatroom Home</a></h4>
 </div>
-<!--div th:text="${userMessage.message}"></div-->
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
