--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -16,6 +16,7 @@
         <h1 class="title">Chatroom: </h1>
         <h1 style="display:none" class="title" id="chatId" th:text="${chatroomId}"></h1>
         <h1 class="title" th:text="${chatroom.name}"></h1>
+
         <div style="display:none" id="userId" th:text="${user.userId}"></div>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
@@ -68,9 +69,15 @@
             </div>
         </div>
         <div class="col">
-            <ul class="list-group" th:each="user: ${usernames}">
-                <li class="list-group-item" th:text="${user}"></li>
+            <ul th:each="userrole : ${userroles}">
+                <li>
+                    <span class="list-group-item" th:text="${userrole.username}"></span>
+                    <span class="list-group-item" th:text="${userrole.role}"></span>
+                </li>
             </ul>
+
+
+
             <form th:action="@{/chatroom/{id}/create-role(id=${chatroom.id})}" method="GET" style="max-width: 600px; margin: 0 auto";>
                 <label class="col-4 col-form-label"> Want a role? </label>
                 <button type="submit" class="btn">Create</button>
