--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -15,7 +15,6 @@
     <div class="username-page-container">
         <h1 class="title">Chatroom: </h1>
         <h1 style="display:none" class="title" id="chatId" th:text="${chatroomId}"></h1>
-        <h1 class="title" th:text="${chatroomId}"></h1>
         <h1 class="title" th:text="${chatroom.name}"></h1>
 
         <div style="display:none" id="userId" th:text="${user.userId}"></div>
@@ -70,12 +69,28 @@
             </div>
         </div>
         <div class="col">
-            <ul th:each="userrole : ${userroles}">
+            <ul style="background-color: cornflowerblue">
                 <li>
+                    <span class="list-group-item" th:text="${adminuser.username}"></span>
+                    <span class="list-group-item" th:text="${adminuser.role}"></span>
+                </li>
+            </ul>
+            <ul>
+                <li th:each="userrole : ${userroles}">
                     <span class="list-group-item" th:text="${userrole.username}"></span>
                     <span class="list-group-item" th:text="${userrole.role}"></span>
                 </li>
             </ul>
+            <!--ul>
+                <li>
+                    <span class="list-group-item" th:text="${useradmin.username}"></span>
+                    <span class="list-group-item" th:text="${useradmin.role}"></span>
+                </li>
+                <li  th:each="userrole : ${userroles}">
+                    <span class="list-group-item" th:text="${userrole.username}"></span>
+                    <span class="list-group-item" th:text="${userrole.role}"></span>
+                </li>
+            </ul-->
 
             <form th:action="@{/chatroom/{id}/create-role(id=${chatroom.id})}" method="GET" style="max-width: 600px; margin: 0 auto";>
                 <label class="col-4 col-form-label"> Want a role? </label>
