--- a/spring-boot-tutorial/src/main/resources/templates/signup.html
+++ b/spring-boot-tutorial/src/main/resources/templates/signup.html
@@ -45,6 +45,10 @@
             </div>
         </div>
     </form>
+    <div class="container text-center" style="max-width: 600px; margin: 0 auto; margin-top: 50px;";>
+        <h3 class="col-4 col-form-label" >Back to Sign in!</h3>
+        <h4><a class="btn" th:href="@{/}">Click here to Login</a></h4>
+    </div>
 </div>
 </body>
 </html>
