--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -9,36 +9,52 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body onload="connect();">
+<!--body-->
 
 <div id="username-page">
     <div class="username-page-container">
         <h1 class="title">Chatroom: </h1>
         <h1 style="display:none" class="title" id="chatId" th:text="${chatroomId}"></h1>
+        <!--h1 style="display:none" class="title" id="favoriteStatus" th:text="${favorite}"></h1-->
+        <h1 style="display:none" class="title" id="favoriteString" th:text="${favString}"></h1>
         <h1 class="title" th:text="${chatroom.name}"></h1>
 
         <div style="display:none" id="userId" th:text="${user.userId}"></div>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
+                <!--div class="form-control" th:text="${user.username}"></div-->
                 <input type="text" id="name" th:value="${user.username}" autocomplete="on" class="form-control" disabled/>
             </div>
-            <div class="form-group" id="startForm" style="display:block">
+            <div class="form-group" id="startForm" style="display:none">
                 <button type="submit" class="accent username-submit">Start chatting</button>
             </div>
         </form>
     </div>
+
+
+    <div th:if="${favorite}" id="favoriteChecked" class="chat-header col form-group" style="text-align: right; display:block;">
+        <div class="accent username-submit">Favorite</div>
+    </div>
+    <form id="favoriteForm" class="chat-header col" style="text-align: right; display:none;">
+        <div id="favoriteButton" class="form-group" style="display:block;">
+            <button type="submit" class="accent username-submit">Favorite</button>
+        </div>
+    </form>
+    <form id="removeFavoriteForm" class="chat-header col" style="text-align: right; display:none;">
+        <div id="removeFavoriteButton" class="form-group" style="display:block;">
+            <button type="submit" class="accent username-submit">Remove from Favorite</button>
+        </div>
+    </form>
 </div>
+
+
+
 
 <div class="container">
     <div class="row">
         <div class="chat-header col">
             <h2 th:text="${chatroom.name}"></h2>
-        </div>
-        <div class="chat-header col" style="text-align: right;">
-            <label class="form-check-label" for="gridCheck1">
-                Favourite
-            </label>
-            <input class="form-check-input" type="checkbox" id="gridCheck1">
         </div>
     </div>
     <div class="row">
@@ -110,9 +126,7 @@
 <script>
     'use strict';
 
-    var usernamePage = document.querySelector('#username-page');
-    var chatPage = document.querySelector('#chat-page');
-    var usernameForm = document.querySelector('#usernameForm');
+    //var usernameForm = document.querySelector('#usernameForm');
     var messageForm = document.querySelector('#messageForm');
     var messageInput = document.querySelector('#message');
     var messageArea = document.querySelector('#messageArea');
@@ -120,6 +134,16 @@
     var startForm = document.querySelector('#startForm');
     var leaveForm = document.querySelector('#leaveForm');
 
+    var favoriteForm = document.querySelector('#favoriteForm');
+    var removeFavoriteForm = document.querySelector('#removeFavoriteForm');// for when already favorite
+    var favoriteChecked = document.querySelector('#favoriteChecked');
+    //var favoriteButton = document.querySelector('#favoriteButton');
+    //var removeFavoriteButton = document.querySelector('#removeFavoriteButton');
+
+
+    var joinCounts = 0;
+    var chatCounts = 1; // Reset at each sendMessage to zero. Only send message when chatCount = 0
+    var leaveCounts = 0;
     var stompClient = null;
     var username = null;
     var dateTime = null;
@@ -132,9 +156,10 @@
     function connect(event) {
         messageForm.style.display = "block";  // <-- Set it to block to display
         leaveForm.style.display = "block";
-        startForm.style.display = "none";
 
+        // CONNECT TO SOCKET SERVER
         username = document.querySelector('#name').value.trim();
+        //username = document.querySelector('#name').textContent;
         if(username) {
             connectingElement.style.display = "block";
 
@@ -143,12 +168,23 @@
 
             stompClient.connect({}, onConnected, onError);
         }
+
+        // Tell favorite starting status to the server
+        var favoriteString = document.querySelector('#favoriteString').textContent;
+        if (favoriteString === "true"){
+            removeFavoriteForm.style.display = "block";
+        }
+        if (favoriteString === "false"){
+            favoriteForm.style.display = "block";
+        }
+
         event.preventDefault();
     }
 
     function onConnected() {
         // Subscribe to the Public Topic
         stompClient.subscribe('/topic/public', onMessageReceived);
+        stompClient.subscribe('/topic/favorite', onFavoriteStatusChange);
 
         // Tell your username to the server
         stompClient.send("/app/chat.addUser",
@@ -182,6 +218,7 @@
     }
 
     function sendMessage(event) {
+        chatCounts = 0;  // When new message sent reset count
         var messageContent = messageInput.value.trim();
         var chatroomId = document.querySelector('#chatId').textContent;
         var userId = document.querySelector('#userId').textContent;
@@ -206,38 +243,60 @@
     function onMessageReceived(payload) {
         var message = JSON.parse(payload.body);
 
-        var messageElement = document.createElement('li');
+        var messageElement = document.createElement('li');  // create list element;
 
         if(message.type === 'JOIN') {
-            messageElement.classList.add('event-message');
-            message.content = message.sender + ' joined!'; // message when joining
+            if(joinCounts === 0) {
+                messageElement.classList.add('event-message');
+                message.content = message.sender + ' joined!'; // message when joining
+            }
+            else{
+                messageElement = null;
+            }
+            joinCounts = joinCounts + 1;
         } else if (message.type === 'LEAVE') {
-            messageElement.classList.add('event-message');
-            message.content = message.sender + ' left!';  // message when leaving
-        } else {
-            messageElement.classList.add('chat-message');
+            if(leaveCounts === 0) {
+                messageElement.classList.add('event-message');
+                message.content = message.sender + ' left!'; // message when leaving
+            }
+            else{
+                messageElement = null;
+            }
+            leaveCounts = leaveCounts + 1;
 
-            var avatarElement = document.createElement('i');  // i - tag for avatar color
-            var avatarText = document.createTextNode(message.sender[0]);
-            avatarElement.appendChild(avatarText);
-            avatarElement.style['background-color'] = getAvatarColor(message.sender);
+        } else { // message.type: CHAT or other
+            if(chatCounts !== 0) {
+                messageElement = null;
+            }
+            if(messageElement !== null) {
+                joinCounts = 0;
+                leaveCounts = 0;
+                messageElement.classList.add('chat-message');
 
-            messageElement.appendChild(avatarElement);
+                var avatarElement = document.createElement('i');  // i - tag for avatar color
+                var avatarText = document.createTextNode(message.sender[0]);
+                avatarElement.appendChild(avatarText);
+                avatarElement.style['background-color'] = getAvatarColor(message.sender);
 
-            var usernameElement = document.createElement('span'); // span - tag for username sender
-            var usernameText = document.createTextNode(message.sender);
-            usernameElement.appendChild(usernameText);
-            messageElement.appendChild(usernameElement);
+                messageElement.appendChild(avatarElement);
+
+                var usernameElement = document.createElement('span'); // span - tag for username sender
+                var usernameText = document.createTextNode(message.sender);
+                usernameElement.appendChild(usernameText);
+                messageElement.appendChild(usernameElement);
+                chatCounts = chatCounts + 1;
+            }
+
         }
+        if(messageElement !== null) {
+            var textElement = document.createElement('p');
+            var messageText = document.createTextNode(message.content); // p - tag for message content
+            textElement.appendChild(messageText);
+            messageElement.appendChild(textElement);
 
-        var textElement = document.createElement('p');
-        var messageText = document.createTextNode(message.content); // p - tag for message content
-        textElement.appendChild(messageText);
-
-        messageElement.appendChild(textElement);
-
-        messageArea.appendChild(messageElement);
-        messageArea.scrollTop = messageArea.scrollHeight;  // all inserted into ul tag with id messageArea
+            messageArea.appendChild(messageElement);
+            messageArea.scrollTop = messageArea.scrollHeight;  // all inserted into ul tag with id messageArea
+        }
     }
 
 
@@ -250,9 +309,56 @@
         return colors[index];
     }
 
-    usernameForm.addEventListener('submit', connect, true)
+
+    function makeFavorite(event) {
+        //stompClient.subscribe('/topic/favorite', onFavoriteStatusChange);
+        var favorite = 'Favorite';
+        favoriteChange(favorite);
+        event.preventDefault();
+    }
+
+    function removeFavorite(event) {
+        //stompClient.subscribe('/topic/favorite', onFavoriteStatusChange);
+        var favorite = 'RemoveFavorite';
+        favoriteChange(favorite);
+        event.preventDefault();
+    }
+
+    function favoriteChange(favorite) {
+        var chatroomId = document.querySelector('#chatId').textContent;
+        var userId = document.querySelector('#userId').textContent;
+
+        if(chatroomId && userId) {
+            var chatMessage = {
+                content: favorite,
+                chatroomId: chatroomId,
+                userId : userId,
+            };
+            stompClient.send("/app/chat.favorite", {}, JSON.stringify(chatMessage));
+        }
+    }
+
+    function onFavoriteStatusChange(payload) {
+        var message = JSON.parse(payload.body);
+       // var messageElement = document.createElement('button'); // create button
+        if(message.content === "Favorite") {
+            removeFavoriteForm.style.display = "block";
+            favoriteForm.style.display = "none";
+            favoriteChecked.style.display = "block";
+        } else if (message.content === "RemoveFavorite") {
+            favoriteForm.style.display = "block";
+            removeFavoriteForm.style.display = "none";
+            favoriteChecked.style.display = "none";
+        }
+    }
+
+
+    //usernameForm.addEventListener('submit', connect, true)
     messageForm.addEventListener('submit', sendMessage, true)
     leaveForm.addEventListener('submit', leave, true)
+    favoriteForm.addEventListener('submit', makeFavorite, true)
+    removeFavoriteForm.addEventListener('submit', removeFavorite, true)
+    document.addEventListener('DOMContentLoaded', connect, false);
 
 </script>
 </html>
