--- a/spring-boot-tutorial/src/main/resources/templates/home.html
+++ b/spring-boot-tutorial/src/main/resources/templates/home.html
@@ -3,39 +3,215 @@
 <head>
     <meta charset="UTF-8">
     <title>KTH Chatroom ID1212</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        .title{
+            font-weight: bold;
+            font-size: 30px;
+        }
+        .subtitle{
+            font-weight: bold;
+            font-size: 28px;
+            margin-bottom: 27px;
+        }
+        .list-title{
+            font-weight: bold;
+            font-size: 17px;
+            margin-left: 10px;
+            vertical-align: top;
+        }
+
+        .button-container{
+            display: block;
+            width: 100%;
+        }
+        .button-logout{
+            display: inline-block;
+            width: 50%;
+            float: right;
+            margin-right: 10px;
+            text-align: right;
+        }
+        .button-add-chatroom{
+            display: inline-block;
+            width: 50%;
+            float: left;
+        }
+
+        .chatroom-container{
+            margin-top: 100px;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            margin-right: 50px;
+            margin-left: 50px;
+            //overflow-y: scroll;
+        }
+
+        .chatroom-box-border{
+            border-left: 1px solid;
+            border-right: 1px solid;
+            border-color: cornflowerblue;
+            padding: 10px;
+            background-color: lightblue;
+            //background-color: #bcd4e6;
+            margin: 3px;
+            paddin-bottom: 10px;
+        }
+        .chatroom-box {
+            min-width: 240px;
+            margin: 8px;
+        }
+
+        .chatroom-box-main {
+            min-width: 250px;
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+
+        .chatroom-list {
+            display: block;
+            margin-right: 10%;
+            width: 100%;
+            margin-top: 10%;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        .chatroom-list-element {
+            display: inline-block;
+            float: left;
+            width: 50%;
+            font-size: 15px;
+            color: midnightblue;
+        }
+        .chatroom-list-element-btn {
+            display: inline-block;
+            margin-left: 90%;
+            text-align: right;
+            float: right;
+            width: 50%;
+        }
+        .chatroom-list-element-main {
+            display: inline-block;
+            float: left;
+            width: 50%;
+            font-size: 15px;
+            font-weight: bold;
+            color: midnightblue;
+        }
+        .chatroom-list-element-alone{
+            float: left;
+            width: 100%;
+            font-size: 15px;
+            color: midnightblue;
+        }
+
+        @media screen and (max-width: 950px) {
+            .chatroom-box {
+                min-width: 200px;
+                margin-top: 30px;
+                margin-bottom: 30px;
+            }
+            .chatroom-box-main {
+                min-width: 210px;
+                margin-right: 7px;
+                margin-left: 7px;
+            }
+        }
+        @media screen and (max-width: 700px) {
+            .chatroom-box {
+                min-width: 160px;
+            }
+            .chatroom-box-main {
+                min-width: 165px;
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .chatroom-container{
+                display: block;
+                margin-top: 100px;
+            }
+            .chatroom-box {
+                margin-top: 100px;
+                margin-bottom: 30px;
+            }
+            .chatroom-box-border{
+                border-left: none;
+                border-right: none;
+                border-top: 1px solid;
+                border-bottom: 1px solid;
+                margin-top: 30px;
+                margin-bottom: 30px;
+                padding-bottom: 30px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h3>User</h3>
-    <h6 th:text="${user.username}"></h6>
-    <form th:action="@{/logout}" method="GET" style="max-width: 600px; margin: 0 auto";>
-        <label class="col-4 col-form-label"> Done? </label>
-        <button type="submit" class="btn">Log out</button>
-    </form>
-    <form th:action="@{/create-chatroom}" method="GET" style="max-width: 600px; margin: 0 auto";>
-        <label class="col-4 col-form-label"> Create a new chatroom? </label>
-        <button type="submit" class="btn">Add</button>
-    </form>
+    <h1 class="title">User</h1>
+    <h5 class="subtitle" th:text="${user.username}"></h5>
+    <div style="display:none" id="userId" th:text="${user.userId}"></div>
 
-    <h6> Your Chatrooms </h6>
-    <div>
-        <ul th:each="chatroom: ${chatroom}">
-            <li>
-                <a th:href="@{/chatroom/{id}(id=${chatroom.id})}" th:text="${chatroom.name}"></a>
-                <form th:action="@{/leave-chatroom/{id}(id=${chatroom.id})}" method="GET" style="max-width: 600px; margin: 0 auto";>
-                    <button type="submit" class="btn">Leave</button>
-                </form>
-            </li>
-        </ul>
+    <div class="button-container">
+        <form class="button-logout" th:action="@{/logout}" method="GET" style="margin: 0 auto";>
+            <label class="col-4 col-form-label"> Done? </label>
+            <button type="submit" class="btn btn-primary">Log out</button>
+        </form>
+        <form class="button-add-chatroom" th:action="@{/create-chatroom}" method="GET" style="margin: 0 auto";>
+            <label class="col-4 col-form-label"> Create a new chatroom? </label>
+            <button type="submit" class="btn btn-primary">Add</button>
+        </form>
     </div>
 
-    <h6> Public Chatrooms you can Join </h6>
-    <div>
-        <ul th:each="chatroom: ${pubchatroom}">
-            <li>
-                <a th:href="@{/chatroom/{id}(id=${chatroom.id})}" th:text="${chatroom.name}"></a>
-            </li>
-        </ul>
-    </div>
 
+
+    <div class="chatroom-container">
+        <div class="chatroom-box-border" >
+            <div class="chatroom-box">
+                <h6 class="list-title"> Your Favorite Chatrooms </h6>
+                <ul th:each="chatroom: ${favchatroom}">
+                    <li class="chatroom-list">
+                        <a class="chatroom-list-element" style="display: inline-block;"; th:href="@{/chatroom/{id}(id=${chatroom.id})}" th:text="${chatroom.name}"></a>
+                        <form class="chatroom-list-element-btn" th:action="@{/leave-chatroom/{id}(id=${chatroom.id})}" method="GET" style="max-width: 600px; margin: 0 auto";>
+                            <button type="submit" class="btn">Leave</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="chatroom-box-border">
+            <div class="chatroom-box-main">
+                <h6 class="list-title"> Your Chatrooms </h6>
+                <ul th:each="chatroom: ${chatroom}">
+                    <li class="chatroom-list">
+                        <a class="chatroom-list-element-main" th:href="@{/chatroom/{id}(id=${chatroom.id})}" th:text="${chatroom.name}"></a>
+                        <form class="chatroom-list-element-btn" th:action="@{/leave-chatroom/{id}(id=${chatroom.id})}"
+                              method="GET" style="max-width: 600px; margin: 0 auto;";>
+                            <button type="submit" class="btn">Leave</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="chatroom-box-border">
+            <div class="chatroom-box">
+                <h6 class="list-title"> Public Chatrooms you can Join </h6>
+                <ul th:each="chatroom: ${pubchatroom}">
+                    <li class="chatroom-list">
+                        <a class="chatroom-list-element-alone" th:href="@{/chatroom/{id}(id=${chatroom.id})}" th:text="${chatroom.name}"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
