--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -90,21 +90,16 @@
                     <div class="form-group">
                         <div class="input-group clearfix">
                             <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-                            <button type="submit" class="primary">Send</button>
+                            <button id="sendMsgBtn" type="submit" class="primary">Send</button>
                             <button id="uploadBtn" class="primary">Upload File</button>
                         </div>
                     </div>
                 </form>
             </div>
-            <form id="leaveForm" name="usernameForm" style="display:none">
-                <div class="form-group">
-                    <button type="submit" class="accent username-submit">Stop chatting</button>
-                </div>
-            </form>
             <div class="upload-container" id="upload-container">
                 <div class="upload-content">
                     <div class="single-upload">
-                        <h3>Upload Single File</h3>
+                        <h5>Upload File</h5>
                         <form id="singleUploadForm" name="singleUploadForm">
                             <input id="singleFileUploadInput" type="file" name="file" class="file-input" required />
                             <button type="submit" class="primary submit-btn">Submit</button>
@@ -116,6 +111,11 @@
                     </div>
                 </div>
             </div>
+            <form id="leaveForm" name="usernameForm" style="display:none">
+                <div class="form-group">
+                    <button type="submit" class="accent username-submit">Stop chatting</button>
+                </div>
+            </form>
         </div>
         <div class="col">
             <ul style="background-color: cornflowerblue">
@@ -169,7 +169,7 @@
     var singleUploadForm = document.querySelector('#singleUploadForm');
     var singleFileUploadInput = document.querySelector('#singleFileUploadInput');
     var singleFileUploadError = document.querySelector('#singleFileUploadError');
-    var singleFileUploadSuccess = document.querySelector('#singleFileUploadSuccess');
+    var sendButton = document.querySelector('#sendMsgBtn');
 
     var fileId = null;
 
@@ -186,13 +186,10 @@
             var response = JSON.parse(xhr.responseText);
             if(xhr.status == 200) {
                 singleFileUploadError.style.display = "none";
-                singleFileUploadSuccess.innerHTML = "<p>File Uploaded Successfully with id: " + response.fileId + ".</p><p>DownloadUrl : <a href='" + response.fileDownloadUri + "' target='_blank'>" + response.fileDownloadUri + "</a></p>";
                 fileId = response.fileId;
                 messageInput.value = response.fileDownloadUri;
-                //messageInput.value = "<a href='" + response.fileDownloadUri + "' target='_blank'>" + response.fileDownloadUri + "</a>";
-                singleFileUploadSuccess.style.display = "block";
+                sendButton.click();
             } else {
-                singleFileUploadSuccess.style.display = "none";
                 singleFileUploadError.innerHTML = (response && response.message) || "Some Error Occurred";
             }
         }
@@ -244,6 +241,7 @@
     uploadBtn.addEventListener('click', showUploadContainer, true);
 
     function showUploadContainer(event) {
+        messageForm.style.display = "none";
         uploadFrom.style.display = "block";
         event.preventDefault();
     }
@@ -315,6 +313,7 @@
     function sendMessage(event) {
         chatCounts = 0;  // When new message sent reset count
         uploadFrom.style.display = "none";
+        messageForm.style.display = "block";
 
         var messageContent = messageInput.value.trim();
         var chatroomId = document.querySelector('#chatId').textContent;
