--- a/spring-boot-tutorial/src/main/resources/templates/chatroom.html
+++ b/spring-boot-tutorial/src/main/resources/templates/chatroom.html
@@ -20,6 +20,7 @@
 <div id="username-page">
     <div class="username-page-container">
         <h1 class="title">Chatroom </h1>
+        <h1 th:if="${status}"class="title" th:text="${status}"></h1>
         <h1 style="display:none" class="title" id="chatId" th:text="${chatroomId}"></h1>
         <h1 style="display:none" class="title" id="favoriteStatus" th:text="${favorite}"></h1>
         <h1 style="display:none" class="title" id="favoriteString" th:text="${favString}"></h1>
