--- a/spring-boot-tutorial/src/main/resources/templates/home.html
+++ b/spring-boot-tutorial/src/main/resources/templates/home.html
@@ -124,11 +124,10 @@
             }
             .chatroom-box-main {
                 min-width: 165px;
-                margin-right: 7px;
-                margin-left: 7px;
+                margin: 22px 7px 30px;
             }
         }
-   /*     @media screen and (max-width: 730px) {
+        @media screen and (max-width: 730px) {
             .chatroom-box {
                 min-width: 100px;
             }
@@ -158,7 +157,7 @@
             .chatroom-list {
                 margin-right: 0px;
             }
-        }*/
+        }
 
         @media screen and (max-width: 730px) {
             .chatroom-container{
@@ -182,7 +181,7 @@
                 margin-bottom: 30px;
                 padding-bottom: 30px;
             }
-        /*    .chatroom-list-element {
+            .chatroom-list-element {
                 display: inline-block;
                 float: left;
                 width: 70%;
@@ -198,7 +197,7 @@
                 display: inline-block;
                 float: left;
                 width: 70%;
-            }*/
+            }
         }
     </style>
 </head>
